ADD: function add (not completed), filter by candidate name, delete (not completed), edit (not completed)